--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
@@ -41,8 +41,8 @@
                 </Div>
                 <Divider Class="my-2"></Divider>
                 <Div Class="px-3">
-                    <h6 class="m-0">@L["Street"]</h6>
-                    <Span>@(DefaultAddress?.Street ?? "N/A")</Span>
+                    <h6 class="m-0">@L["Address"]</h6>
+                    <Span>@(DefaultAddress?.Address ?? "N/A")</Span>
                 </Div>
             </CardBody>
         </Card>
