--- a/src/Kooco.Pikachu.Blazor/Pages/UserAddresses/EditUserAddressModal.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/UserAddresses/EditUserAddressModal.razor
@@ -32,8 +32,8 @@
                             </TextEdit>
                         </Field>
                         <Field>
-                            <FieldLabel>@L["Street"]<Span Class="text-danger"> *</Span></FieldLabel>
-                            <TextEdit @bind-Text="@EditingUserAddress.Street">
+                            <FieldLabel>@L["Address"]<Span Class="text-danger"> *</Span></FieldLabel>
+                            <TextEdit @bind-Text="@EditingUserAddress.Address">
                                 <Feedback>
                                     <ValidationError />
                                 </Feedback>
