#PK-170 Edit member screen implementation

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
@@ -27,7 +27,7 @@
                 <Divider Class="my-2"></Divider>
                 <Div Class="px-3">
                     <h6 class="m-0">@L["Birthday"]</h6>
-                    <Span>2000/01/01</Span>
+                    <Span>@Member.Birthday?.ToString("yyyy/MM/dd")</Span>
                 </Div>
                 <Divider Class="my-2"></Divider>
                 <Div Class="px-3">
