--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -301,6 +301,7 @@
     --pk-bg-warning-light: #FFFAEB;
     --pk-danger: #F04438;
     --pk-danger-light: #F0443890;
+    --pk-danger-dark: #FD3325;
     --pk-bg-danger-light: #FEF3F2;
     --pk-light: #FFF;
     --pk-semi-light: #FFFFFF80;
@@ -316,7 +317,7 @@
     background: transparent;
     border-radius: 0.75rem;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 15px;
     padding: 0.75rem 1rem;
 }
 
@@ -325,8 +326,8 @@
     }
 
 .pk-btn-sm {
-    font-size: 12px;
-    padding: 0.25rem 0.5rem;
+    font-size: 13px;
+    padding: 0.5rem 0.75rem;
     border-radius: 0.5rem;
     font-weight: 500;
 }
@@ -349,6 +350,27 @@
         color: var(--pk-light);
     }
 
+.pk-btn-outline-primary {
+    border-color: var(--pk-primary-light);
+    color: var(--pk-primary);
+    background: transparent;
+}
+
+    .pk-btn-outline-primary:hover {
+        background-color: var(--pk-primary);
+        color: var(--pk-light);
+    }
+
+    .pk-btn-outline-primary:active {
+        background-color: var(--pk-primary-dark);
+        color: var(--pk-light);
+    }
+
+    .pk-btn-outline-primary:disabled {
+        color: var(--pk-primary-light);
+        background-color: transparent;
+    }
+
 .pk-btn-light {
     background: var(--pk-light);
     color: var(--pk-dark);
@@ -359,6 +381,19 @@
     }
 
     .pk-btn-light:disabled {
+        color: var(--pk-semi-dark);
+    }
+
+.pk-btn-transparent {
+    background: transparent;
+    color: var(--pk-dark);
+}
+
+    .pk-btn-transparent:hover {
+        background-color: var(--pk-lightgrey);
+    }
+
+    .pk-btn-transparent:disabled {
         color: var(--pk-semi-dark);
     }
 
@@ -374,7 +409,7 @@
     }
 
     .pk-btn-outline-danger:active {
-        background-color: var(--pk-danger-light);
+        background-color: var(--pk-danger-dark);
         color: var(--pk-light);
     }
 
