--- a/src/Kooco.Pikachu.Blazor/Pages/Members/ShoppingCredits/CreateShoppingCredits.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/ShoppingCredits/CreateShoppingCredits.razor
@@ -33,25 +33,34 @@
                                 <Validation MessageLocalizer="@LH.Localize">
                                     <Field>
                                         <FieldLabel>@L["GrantedAmount"] *</FieldLabel>
-                                        <NumericEdit @bind-Value="@NewUserShoppingCredit.Amount">
+                                        <TextEdit @bind-Text="@NewUserShoppingCredit.AmountString"
+                                                  MaskType="MaskType.RegEx" EditMask="^\d+$">
                                             <Feedback>
                                                 <ValidationError />
                                             </Feedback>
-                                        </NumericEdit>
+                                        </TextEdit>
                                     </Field>
                                 </Validation>
                                 <Validation MessageLocalizer="@LH.Localize">
                                     <Field>
                                         <FieldLabel>@L["UsagePeriod"] *</FieldLabel>
-                                        <RadioGroup TValue="bool?" Name="CanExpire" @bind-CheckedValue="NewUserShoppingCredit.CanExpire">
-                                            <Radio Value="@(false)">@L["NoExpiry"]</Radio>
-                                            <Radio Value="@(true)">@L["Limited,ValidTo"]</Radio>
+                                        <RadioGroup TValue="bool?"
+                                                    Name="UsagePeriod"
+                                                    @bind-CheckedValue="@NewUserShoppingCredit.CanExpire"
+                                                    Orientation="Orientation.Vertical">
+                                            <ChildContent>
+                                                <Radio Class="d-block" TValue="bool?" Value="@(false)">@L["NoExpiry"]</Radio>
+                                                <Radio Class="d-block" TValue="bool?" Value="@(true)">@L["Limited,ValidTo"]</Radio>
+                                            </ChildContent>
+                                            <Feedback>
+                                                <ValidationError />
+                                            </Feedback>
                                         </RadioGroup>
                                     </Field>
                                 </Validation>
                                 <Validation MessageLocalizer="@LH.Localize">
                                     <Field>
-                                        <DateEdit @bind-Date="@NewUserShoppingCredit.ExpirationDate">
+                                        <DateEdit @bind-Date="@NewUserShoppingCredit.ExpirationDate" Min="DateTime.Today.AddDays(1)">
                                             <Feedback>
                                                 <ValidationError />
                                             </Feedback>
@@ -61,7 +70,7 @@
                                 <Divider></Divider>
                                 <Validation MessageLocalizer="@LH.Localize">
                                     <Field>
-                                        <FieldLabel>@L["TransactionDetails"]</FieldLabel>
+                                        <FieldLabel>@L["TransactionDetails"] *</FieldLabel>
                                         <TextEdit @bind-Text="@NewUserShoppingCredit.TransactionDescription">
                                             <Feedback>
                                                 <ValidationError />
@@ -70,7 +79,7 @@
                                     </Field>
                                 </Validation>
                                 <Field>
-                                    <FieldLabel>@L["SendNotification"] *</FieldLabel>
+                                    <FieldLabel>@L["SendNotification"]</FieldLabel>
                                     <Check TValue="bool" @bind-Checked="@NewUserShoppingCredit.SendEmail">@L["Email"]</Check>
                                     <Check TValue="bool" @bind-Checked="@NewUserShoppingCredit.SendSms">@L["SMS"]</Check>
                                 </Field>
